#UPDATE agrego ejemplo data provider desde csv y google api para trabajar con respuestas complejas

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,6 +1,7 @@
 #URIBASE
 BASE_HOST= https://reqres.in
-
+BASE_HOST_GOOGLE_API = https://www.googleapis.com
+                                                
 #BASEPATH
 BASE_PATH = /api
 
@@ -8,3 +9,5 @@ BASE_PATH = /api
 GET_USER_BY_ID = /users/{userId}
 GET_LIST_USERS = /users
 POST_USER = /users
+
+GET_BOOKS_BY_QUERY_PARAM = /books/v1/volumes
